--- a/index.html
+++ b/index.html
@@ -54,19 +54,20 @@
 
       <!-- Fetch quizzes -->
       <div
-        class="relative flex flex-wrap gap-12 overflow-auto px-12 py-12"
+        class="relative flex flex-wrap justify-center gap-12 overflow-auto px-12 py-12"
         x-data
         x-show="$store.quizzes.length > 0"
         x-transition
       >
         <template x-data x-for="(quiz, i) in $store.quizzes">
-          <div
-            class="flex scale-100 flex-col items-center gap-4 transition-all hover:scale-105"
+          <a
+            class="flex scale-100 flex-col items-center gap-4 text-black transition-all hover:scale-105 hover:no-underline"
+            :href="`/quiz?spreadsheetID=${quiz.spreadsheetID}&sheetName=${quiz.sheetName}`"
           >
             <!-- Image -->
             <div class="relative h-48 w-48 overflow-hidden rounded-full">
               <div
-                class="absolute h-full w-full rounded-md p-2"
+                class="absolute h-full w-full rounded-md p-1"
                 :style="`background: linear-gradient(to right, hsl(${i*80}, 60%, 60%), hsl(${i*80+30}, 60%, 60%));`"
               >
                 <img
@@ -77,8 +78,18 @@
             </div>
 
             <!-- Quiz name -->
-            <p x-text="quiz.name" class="font-serif text-xl"></p>
-          </div>
+            <p
+              x-text="quiz.name"
+              class="bg-clip-text text-2xl font-bold"
+              x-data
+              :style="`
+                background: linear-gradient(to right, hsl(${i*80}, 60%, 30%), hsl(${i*80+30}, 60%, 30%));
+                background-clip: text;
+                -webkit-background-clip: text;
+                color: transparent;
+              `"
+            ></p>
+          </a>
         </template>
       </div>
     </main>
