Add PNG logo for meta tags

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -8,7 +8,7 @@
 
     <meta
       property="og:description"
-      content="A little quiz for Lakeside Fall Festival 2023"
+      content="A little quiz for Fall Festival 2023"
     />
     <meta property="og:title" content="Quiz!" />
     <meta
