Update meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LAPS Trivia</title>
     <link rel="icon" href="/assets/favicon.svg" />
+    <meta
+      property="og:description"
+      content="A little quiz for Fall Festival 2023"
+    />
+    <meta property="og:title" content="LAPS Trivia" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/womogenes/quizzer/main/assets/favicon.png"
+    />
 
     <!-- Styles -->
     <link rel="stylesheet" href="/css/style.css" />
