--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LAPS quiz</title>
     <link rel="icon" href="/assets/favicon.svg" />
-
     <meta
       property="og:description"
       content="A little quiz for Fall Festival 2023"
     />
-    <meta property="og:title" content="Quiz!" />
+    <meta property="og:title" content="LAPS Trivia" />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/womogenes/quizzer/8b20e75f404404a053347ebbbae9759e4be3646f/assets/favicon.svg"
+      content="https://raw.githubusercontent.com/womogenes/quizzer/main/assets/favicon.png"
     />
 
     <!-- Our resources -->
