--- a/quiz/index.html
+++ b/quiz/index.html
@@ -170,7 +170,7 @@
 
       <!-- Main display content -->
       <div class="md:p-12">
-        <div class="fpx-4 pb-4 pt-4 md:px-0 md:pt-0">
+        <div class="px-4 pb-4 pt-4 md:px-0 md:pt-0">
           <a
             class="flex items-center justify-start gap-2 font-serif font-bold text-black"
             href="/"
