--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
   <body>
     <main class="overflow-clip">
       <div
-        class="flex w-full justify-center bg-[#b43737] p-12 py-12 text-white"
+        class="flex w-full justify-center bg-[#eb5555] p-12 py-12 text-white"
       >
         <div class="flex w-full max-w-md flex-col items-start gap-2">
-          <h1 class="font-serif text-6xl">TRIVIA TIME</h1>
-          <p>Fall festival 2023 edition</p>
+          <h1 class="font-serif text-6xl">LAPS TRIVIA</h1>
         </div>
       </div>
 
