--- a/quiz/index.html
+++ b/quiz/index.html
@@ -61,34 +61,10 @@
       x-show="!$store.state.quizLoaded || $store.state.questions?.length === 0"
       x-transition
     >
-      <svg
-        width="48"
-        height="48"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-        x-show="!$store.state.quizLoaded"
-        x-transition
-      >
-        <style>
-          .spinner_ajPY {
-            transform-origin: center;
-            animation: spinner_AtaB 0.75s infinite linear;
-          }
-          @keyframes spinner_AtaB {
-            100% {
-              transform: rotate(360deg);
-            }
-          }
-        </style>
-        <path
-          d="M12,1A11,11,0,1,0,23,12,11,11,0,0,0,12,1Zm0,19a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
-          opacity=".25"
-        />
-        <path
-          d="M10.14,1.16a11,11,0,0,0-9,8.92A1.59,1.59,0,0,0,2.46,12,1.52,1.52,0,0,0,4.11,10.7a8,8,0,0,1,6.66-6.61A1.42,1.42,0,0,0,12,2.69h0A1.57,1.57,0,0,0,10.14,1.16Z"
-          class="spinner_ajPY"
-        />
-      </svg>
+      <img
+        class="h-24 w-24 animate-[spin_3s_linear_infinite]"
+        src="/assets/favicon.svg"
+      />
       <div
         class="flex max-w-sm flex-col items-start gap-2"
         x-cloak
@@ -163,7 +139,7 @@
             tabindex="0"
             class="cursor-pointer rounded border-2 bg-white px-4 py-2 text-black !no-underline transition-colors hover:bg-neutral-200"
           >
-            Try more quizzes 🤔
+            Back to quizzes ↩️
           </a>
         </div>
       </div>
@@ -172,12 +148,15 @@
       <div class="md:p-12">
         <div class="px-4 pb-4 pt-4 md:px-0 md:pt-0">
           <a
-            class="flex items-center justify-start gap-2 font-serif font-bold text-black"
+            class="group flex max-w-max items-center gap-2 font-serif font-bold text-black !no-underline"
             href="/"
           >
-            <img class="inline h-4" src="/assets/favicon.svg" />
-            LAPS</a
-          >
+            <img
+              class="inline h-4 group-hover:animate-[spin_2s_ease-in-out_infinite]"
+              src="/assets/favicon.svg"
+            />
+            LAPS
+          </a>
         </div>
 
         <div
@@ -186,7 +165,7 @@
           x-cloak
           x-data="{
           answered() { return $store.state.answerStatus.endsWith('correct'); },
-          transitionOpacity() { return `transition-opacity ${$store.state.answerStatus === 'transitioning' ? 'opacity-0 duration-50' : 'opacity-100 duration-600'}` }
+          transitionOpacity() { return `transition-opacity ${$store.state.answerStatus === 'transitioning' ? 'opacity-0 duration-50' : 'opacity-100 duration-900'}` }
         }"
         >
           <!-- Left column -->
