--- a/quiz/index.html
+++ b/quiz/index.html
@@ -64,6 +64,7 @@
       <img
         class="h-24 w-24 animate-[spin_3s_linear_infinite]"
         src="/assets/favicon.svg"
+        x-show="$store.state.questions?.length !== 0"
       />
       <div
         class="flex max-w-sm flex-col items-start gap-2"
@@ -145,7 +146,12 @@
       </div>
 
       <!-- Main display content -->
-      <div class="md:p-12">
+      <div
+        class="md:p-12"
+        x-show="$store.state.quizLoaded && $store.state.questions?.length > 0"
+        x-cloak
+        x-transition.opacity.duration.1000ms
+      >
         <div class="px-4 pb-4 pt-4 md:px-0 md:pt-0">
           <a
             class="group flex max-w-max items-center gap-2 font-serif font-bold text-black !no-underline"
@@ -161,8 +167,6 @@
 
         <div
           class="flex w-full max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12"
-          x-show="$store.state.quizLoaded && $store.state.questions?.length > 0"
-          x-cloak
           x-data="{
           answered() { return $store.state.answerStatus.endsWith('correct'); },
           transitionOpacity() { return `transition-opacity ${$store.state.answerStatus === 'transitioning' ? 'opacity-0 duration-50' : 'opacity-100 duration-900'}` }
