--- a/quiz/index.html
+++ b/quiz/index.html
@@ -147,7 +147,7 @@
 
       <!-- Main display content -->
       <div
-        class="md:p-12"
+        class="w-full max-w-5xl md:p-12"
         x-show="$store.state.quizLoaded && $store.state.questions?.length > 0"
         x-cloak
         x-transition.opacity.duration.1000ms
@@ -166,7 +166,7 @@
         </div>
 
         <div
-          class="flex w-full max-w-5xl flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12"
+          class="flex flex-col items-start gap-4 sm:flex-row sm:gap-6 md:gap-12"
           x-data="{
           answered() { return $store.state.answerStatus.endsWith('correct'); },
           transitionOpacity() { return `transition-opacity ${$store.state.answerStatus === 'transitioning' ? 'opacity-0 duration-50' : 'opacity-100 duration-900'}` }
@@ -180,6 +180,7 @@
             <!-- Image -->
             <div
               class="relative h-24 overflow-hidden sm:aspect-video sm:h-auto md:rounded-lg"
+              x-show="$store.state.curQues?.imageURL"
             >
               <div
                 class="absolute h-full w-full animate-pulse bg-neutral-200"
