--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
     <main class="overflow-clip">
       <div
-        class="flex w-full justify-center bg-[#eb5555] p-12 py-12 text-white"
+        class="bg-roman-500 flex w-full justify-center p-12 py-12 text-white"
       >
         <div class="flex w-full max-w-md flex-col items-start gap-2">
           <h1 class="font-serif text-6xl">LAPS TRIVIA</h1>
@@ -62,7 +62,7 @@
 
       <!-- Fetch quizzes -->
       <div
-        class="relative flex flex-wrap justify-center gap-12 overflow-auto px-12 py-12"
+        class="grid grid-cols-2 justify-center gap-12 overflow-auto px-12 py-12"
         x-data
         x-show="$store.quizzes.length > 0"
         x-transition
@@ -73,30 +73,29 @@
             :href="`/quiz?spreadsheetID=${quiz.spreadsheetID}&sheetName=${quiz.sheetName}`"
           >
             <!-- Image -->
-            <div class="relative h-48 w-48 overflow-hidden rounded-full">
+            <div class="relative overflow-hidden rounded-full">
               <div
-                class="absolute h-full w-full rounded-md p-1"
+                class="flex h-48 w-48 items-center justify-center rounded-md p-1"
                 :style="`background: linear-gradient(to right, hsl(${i*80}, 60%, 60%), hsl(${i*80+30}, 60%, 60%));`"
               >
-                <img
-                  class="relative z-20 h-full rounded-full object-cover"
-                  :src="`${quiz.imageURL}`"
-                />
+                <div
+                  class="flex h-full w-full items-center justify-center rounded-full bg-white p-4"
+                >
+                  <!-- Quiz name -->
+                  <p
+                    class="bg-clip-text text-center text-2xl font-bold"
+                    x-text="quiz.name"
+                    x-data
+                    :style="`
+                    background: linear-gradient(to right, hsl(${i*80}, 60%, 30%), hsl(${i*80+30}, 60%, 30%));
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;
+                  `"
+                  ></p>
+                </div>
               </div>
             </div>
-
-            <!-- Quiz name -->
-            <p
-              x-text="quiz.name"
-              class="bg-clip-text text-2xl font-bold"
-              x-data
-              :style="`
-                background: linear-gradient(to right, hsl(${i*80}, 60%, 30%), hsl(${i*80+30}, 60%, 30%));
-                background-clip: text;
-                -webkit-background-clip: text;
-                color: transparent;
-              `"
-            ></p>
           </a>
         </template>
       </div>
