Make ending screen fade in slower

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -109,7 +109,7 @@
         x-data
         x-cloak
         x-show="$store.state.showEndScreen"
-        x-transition.opacity
+        x-transition.opacity.duration.1500ms
       >
         <div
           class="flex w-full max-w-sm flex-col items-start gap-6 rounded bg-white p-6 shadow-lg sm:p-8"
@@ -119,7 +119,7 @@
             quizLen = $store.state.answerHistory.length;
           "
         >
-          <div class="flex flex-col gap-2">
+          <div class="flex w-full flex-col gap-2">
             <div class="text-3xl font-bold">
               <span x-show="score == 0" class="break-all">womp womp 😭</span>
               <span x-show="score == 1" class="break-all">Good effort 🥲</span>
@@ -136,9 +136,9 @@
               <span x-text="quizLen" class="font-bold"></span> questions.
             </span>
 
-            <div x-show="score >= 5" class="flex flex-col gap-1">
-              <span>Here's a lollipop:</span>
-              <span class="self-center text-5xl">🍭</span>
+            <div x-show="score >= 5" class="flex flex-col gap-2">
+              <span>Here's some Pocky as a prize!</span>
+              <img class="w-48 self-center" src="/assets/pocky.svg" />
             </div>
           </div>
 
