--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <!-- Fetch quizzes -->
       <div
-        class="grid grid-cols-2 justify-center gap-12 overflow-auto px-12 py-12 sm:grid-cols-4"
+        class="mx-auto grid max-w-max grid-cols-2 justify-center gap-12 overflow-auto px-12 py-12 sm:grid-cols-4"
         x-data
         x-show="$store.quizzes.length > 0"
         x-transition
